Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5302

Phonon MMF: opening audio clip when video clip is open causes crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.0
    • 4.6.0
    • (Inactive) mmfphonon
    • None
    • de7324bb

    Description

      Device: 5800
      Firmware version: V 40.0.001 RnD
      Release: 295d7063
      Platform: ARMV5 UDEB
      Compiler used: ARM/Thumb C/C++ Compiler, RVCT2.2 [Build 686]
      Application: Mediaplayer demo
      Launched from: Application launcher
      Problem description:

      1. Launch mediaplayer
      2. Open video clip - video starts playing
      3. Select "Open File" - brings up file dialog (video still plays in background)
      4. Select audio clip
      5. Application crashes

      Note that the crash does not happen in any of the following scenarios:
      a) Open video clip while audio clip is playing
      b) Open audio clip while audio clip is playing
      c) Open video clip while video clip is playing

      Note also that the crash still happens if we pause the video between steps 2 and 3.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gastockw Gareth Stockwell
            gastockw Gareth Stockwell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes