Fixed crash opening audio clip when video clip currently open

Task-number: QTBUG-5302
Reviewed-by: trustme